fixed alignement

--- a/style/overlay.css
+++ b/style/overlay.css
@@ -19,7 +19,8 @@
   padding: 40px;
   color: black;
   width: 45%;
-  text-align: left;
+  text-align: justify;
+  white-space: normal;
   margin: 40px auto;
   background-image: url(../img/txtbg.png);
   -webkit-border-radius:12px;
